<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.ffbYieldRecording.FfbYieldRecordingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ffb_palm_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_50"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/palm_code"
                android:inputType="text"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/vertical_margin_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ffb_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_50"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/date"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/vertical_margin_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ffb_num_of_fresh_bunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/num_fresh_bunch"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/vertical_margin_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ffb_weight_of_fresh_bunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:hint="@string/weight_fresh_bunch"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/vertical_margin_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ffb_num_of_rotten_bunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/num_rotten_bunch"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/vertical_margin_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ffb_weight_of_rotten_bunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:hint="@string/weight_rotten_bunch"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/vertical_margin_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ffb_round"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/round"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/vertical_margin_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ffb_supervisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supervisor_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/vertical_margin_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ffb_surveyor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surveyor_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ffb_save_button"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:backgroundTint="@color/light_green_700"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>
