<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.HomeFragment">

    <LinearLayout
        android:id="@+id/layout_ffb_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/layout_vegetative_measurement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:src="@drawable/img_weight_tool" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ffb_fragment_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_vegetative_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/layout_ffb_measurement"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:src="@drawable/img_graphic_design" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/veg_fragment_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_ffb_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/layout_data_sync"
        app:layout_constraintEnd_toStartOf="@id/layout_veg_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_ffb_measurement">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:src="@drawable/img_scroll" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ffb_history_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_veg_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/layout_ffb_history"
        app:layout_constraintTop_toBottomOf="@id/layout_vegetative_measurement">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:src="@drawable/img_scroll" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/veg_history_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_data_sync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/layout_data_sync2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_ffb_history">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:src="@drawable/img_data_sync" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sync_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_data_sync2"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="32dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/layout_data_sync"
        app:layout_constraintTop_toBottomOf="@id/layout_veg_history" />

</androidx.constraintlayout.widget.ConstraintLayout>
